--- a/src_new/label-dashboard-web/src/styles.scss
+++ b/src_new/label-dashboard-web/src/styles.scss
@@ -837,8 +837,9 @@ div .table tbody {
   line-height: 1.4;
   max-width: 300px;
   overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 
 /* Date cell styling */
